小程序中下载按钮不显示

--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -127,7 +127,7 @@
 <div id="process_div_pic" style="display:none"><img style="width:50px;height: 50px;" src="dist/img/376884043677306248.png"><i class="fa fa-refresh fa-spin"></i></div>
 <!-- Site wrapper -->
 <div class="wrapper">
-	<div class="download text-center"><div class="download_icon" id="downloadPdf"><i class="fa fa-download"></i></div><p>下载报告</p></div>
+	<div id="downloadbutton" style="display: none" class="download text-center"><div class="download_icon" id="downloadPdf"><i class="fa fa-download"></i></div><p>下载报告</p></div>
     <header class="main-header">
         <nav class="navbar navbar-static-top">
       <div class="container">
