--- a/WebContent/crm/gax_working_load.html
+++ b/WebContent/crm/gax_working_load.html
@@ -79,7 +79,7 @@
 <body class="hold-transition skin-blue sidebar-mini">
 <!-- Site wrapper -->
 <div class="wrapper">
-    <div class="download text-center"><div class="download_icon" id="downloadPdf"><i class="fa fa-download"></i></div><p>下载报告</p></div>
+    <div id="downloadbutton" style="display: none" class="download text-center"><div class="download_icon" id="downloadPdf"><i class="fa fa-download"></i></div><p>下载报告</p></div>
     <header class="main-header">
         <nav class="navbar navbar-static-top">
             <div class="container">
@@ -786,6 +786,7 @@ function loginShow(){
         var url = "../login.do";
         $$.ajax(url, "requestString=" + reObj.toJsonString(), callback, failureCallback);
     }else{
+        $('#downloadbutton').show();
         showData();
     }
 }
