成本控制以及社员统计bug

--- a/WebContent/cost_statistics/costStatistics_list.html
+++ b/WebContent/cost_statistics/costStatistics_list.html
@@ -218,7 +218,7 @@
 
     //添加成本
     function add(){
-        window.location.href = 'store_cost.html?userGroupCode='+current_user.usergroup.code+"&userId="+current_user.id+"&flag=add";
+        window.location.href = 'costStatistics_add.html?userGroupCode='+current_user.usergroup.code+"&userId="+current_user.id+"&flag=add";
     }
 
 
