--- a/WebContent/cost_statistics/store_cost.html
+++ b/WebContent/cost_statistics/store_cost.html
@@ -399,6 +399,10 @@
                         <table class="table table_x" cellspacing="0" cellpadding="0" id="rent_tb_2">
 
                             <tr id="rent_tr_2">
+                                <th style="text-align: center;background-color:#A9A9A9">序号</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店编码</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店名称</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店地址</th>
                                 <th style="text-align: center"><p style="width: 180px"><span style="font-weight: bold;color:red" id="propertyFeeYear_title"></span>物业费（年）</p></th>
                                 <th style="text-align: center"><p style="width: 180px"><span style="font-weight: bold;color:red" id="propertyDeadline_title"></span>物业期限（月）</p></th>
                                 <th style="text-align: center"><p style="width: 180px"><span style="font-weight: bold;color:red" id="propertyFeeMonth_title"></span>物业费（月）</p></th>
