--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -214,6 +214,9 @@
                                             <div class="form-group has-success col-lg-3">
                                                 <input type="text" class="form-control" id="member_invite_code"  placeholder="邀请码" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')" />
                                             </div>
+                                            <div class="form-group has-success col-lg-3">
+                                                <input type="text" class="form-control" id="member_mobile_phone"  placeholder="手机号" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')" />
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -607,6 +610,7 @@
         $("#process_div_pic").show();
 
         var memberInviteCode = $("#member_invite_code").val();
+        var memberMobilePhone = $("#member_mobile_phone").val();
         //社员开卡时间
         var ocdate = $("#searchTime").val();
         var opencard_begin_end_date=["",""];
@@ -622,6 +626,7 @@
             cityName:cityName,
             storeNo:number_str,
             inviteCode:memberInviteCode,
+            mobilePhone:memberMobilePhone,
             open_card_time_begin:opencard_begin_time,
             open_card_time_end:opencard_end_time
         }
@@ -775,6 +780,7 @@
         }
         $("#store_id_manual").val("");
         $("#member_invite_code").val("");
+        $("#member_mobile_phone").val("");
         var nowDate = new Date();
         var month = nowDate.getMonth()+1;
         var date = nowDate.getDate();
@@ -813,6 +819,7 @@
         $("#process_div_pic").show();
 
         var memberInviteCode = $("#member_invite_code").val();
+        var memberMobilePhone = $("#member_mobile_phone").val();
         //社员开卡时间
         var ocdate = $("#searchTime").val();
         var opencard_begin_end_date=["",""];
@@ -827,6 +834,7 @@
             cityName:cityName,
             storeNo:number_str,
             inviteCode:memberInviteCode,
+            mobilePhone:memberMobilePhone,
             hidden_flag:hiddenvalue,
             open_card_time_begin:opencard_begin_time,
             open_card_time_end:opencard_end_time
