--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -123,6 +123,8 @@
                                         <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
                                         <dd><a href="javascript:searchTinyvillageData()"><span class="fa fa-clipboard"></span>小区档案</a></dd>
                                     	<dd><a href="javascript:searchStoreData()"><span class="fa fa-book"></span>门店信息档案</a></dd>
+                                        <dd style="position:relative"><a href="javascript:goToDataFiles()"><span class="fa fa-server"></span>数据档案 </a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>排名数据</dt>
