--- a/WebContent/crm/userOperationStat_view.html
+++ b/WebContent/crm/userOperationStat_view.html
@@ -176,7 +176,7 @@
 		              <li class=""><a href="#tab_7" data-toggle="tab" aria-expanded="false">1人500户（片区）</a></li>
 		              <li class=""><a href="#tab_4" onclick="inint_newcus()" data-toggle="tab" aria-expanded="false">拉新用户</a></li>
 		              <li class=""><a href="#tab_5" onclick="inint_paycus()" data-toggle="tab" aria-expanded="false">消费用户</a></li>
-		              <li class=""><a href="#tab_9" onclick="init_effect()" data-toggle="tab" aria-expanded="false">有效用户</a></li>
+		              <!--<li class=""><a href="#tab_9" onclick="init_effect()" data-toggle="tab" aria-expanded="false">有效用户</a></li>-->
 					  <li class="" id="li_tab_8" style="display:none"><a href="#tab_8" data-toggle="tab" aria-expanded="false">用户留存分析</a></li>
 <!--  		              <li class=""><a href="#tab_6" data-toggle="tab" aria-expanded="false">1人500户（历史数据）</a></li> -->
 		            </ul>
