--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -821,11 +821,11 @@
             bottom: '3%',
             containLabel: true
         },
-        toolbox: {
-            feature: {
-                saveAsImage: {}
-            }
-        },
+        // toolbox: {
+        //     feature: {
+        //         saveAsImage: {}
+        //     }
+        // }, //图表右上角下载保存图片
         xAxis: {
             type: 'category',
             boundaryGap: false,
