修改首页样式

--- a/WebContent/crm/data_files.html
+++ b/WebContent/crm/data_files.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>数据档案</title>
+  <title>行为数据档案</title>
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
   <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
@@ -141,7 +141,7 @@
 					<div class="pull-left">
 						<div class="logo-lg">
 							<ul class="no-margin">
-								<li class="current"><em>数据档案</em></li>
+								<li class="current"><em>行为（日志）数据档案</em></li>
 							</ul>
 						</div>
 					</div>
