--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -87,15 +87,18 @@
                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="pull-left">
-                                        <dt><i></i>运营数据</dt>
-                                        <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
-                                        <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
-                                        <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
-                                        </dd>
-                                        <dd id="city_net"><a href="javascript:goToCityNet()"><span class="fa fa-institution"></span>线下网络体系</a></dd>
-                                        <dd id="store_rent"><a href="javascript:goToStoreRent()"><span class="fa fa-bicycle"></span>门店租赁统计</a></dd>
-                                        <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
-                                        <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
+                                        <dt style="text-align:center"><i></i>档案数据</dt>
+                                        <dd class="col-sm-6"><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
+                                        <dd class="col-sm-6"><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
+                                        <dd class="col-sm-6"><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
+                                        <dd class="col-sm-6"><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
+                                        <dd class="col-sm-6" style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dd class="col-sm-6"><a href="javascript:searchTinyvillageData()"><span class="fa fa-clipboard"></span>小区档案</a></dd>
+                                        <dd class="col-sm-6" style="position:relative"><a href="javascript:goToDataFiles()"><span class="fa fa-server"></span>行为数据档案 </a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
+                                        <dd class="col-sm-6"><a href="javascript:searchStoreData()"><span class="fa fa-book"></span>门店信息档案</a></dd>
+
                                     </dl>
                                     <dl class="pull-left">
                                         <dt style="text-align:center"><i></i>绩效数据</dt>
@@ -114,17 +117,15 @@
 
                                     </dl>
                                     <dl class="pull-left">
-                                        <dt><i></i>档案数据</dt>
-                                        <dd style="position:relative"><a href="javascript:goToMemberDataStat()"><span class="fa fa-vimeo"></span>社员档案 </a>
-                                        <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                        <dd><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
-                                        <dd><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
-                                        <dd><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
-                                        <dd><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
-                                        <dd><a href="javascript:searchTinyvillageData()"><span class="fa fa-clipboard"></span>小区档案</a></dd>
-                                    	<dd><a href="javascript:searchStoreData()"><span class="fa fa-book"></span>门店信息档案</a></dd>
-                                        <dd style="position:relative"><a href="javascript:goToDataFiles()"><span class="fa fa-server"></span>数据档案 </a>
-                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dt><i></i>运营数据</dt>
+                                        <dd><a href="javascript:goToTurnoverStat()"><span class="fa fa-money"></span>营业额统计</a></dd>
+                                        <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
+                                        <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
+                                        </dd>
+                                        <dd id="city_net"><a href="javascript:goToCityNet()"><span class="fa fa-institution"></span>线下网络体系</a></dd>
+                                        <dd id="store_rent"><a href="javascript:goToStoreRent()"><span class="fa fa-bicycle"></span>门店租赁统计</a></dd>
+                                        <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-cubes"></span>产品运营</a></dd>
+                                        <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>排名数据</dt>
